Compilers construction/Solutions/compiler-construction-xi-2/tests/pracownia2/error/052_function_missing_return.xi
f():int
{
}
//@PRACOWNIA
//@should_not_typecheck
